# nano-caf-2

./: .gitignore  CMakeLists.txt  LICENSE
include/nano-caf/: Status.h
include/nano-caf/actor/: AbstractActor.h  Actor.h  ActorHandle.h  ActorPtr.h  ActorWeakHandle.h  ActorWeakPtr.h  Behavior.h  BehaviorBasedActor.h  BlockingActor.h  ExitReason.h  GlobalActorContext.h  InternalActor.h  LifoQueue.h  MailBox.h  NonblockingActor.h  OnActorContext.h  SchedActor.h  Spawn.h
include/nano-caf/actor/detail/: ActorCtlBlock.h  ActorTimerContext.h  Behavior.h  BehaviorBase.h  BehaviorObject.h  BehaviorTrait.h  Behaviors.h  CancellableMsgHandler.h  ExpectMsgHandler.h  ExpectOnceMsgHandlers.h  MsgHandler.h  MsgTypeTrait.h
include/nano-caf/async/: AbstractPromise.h  FailHandler.h  Future.h  FutureConcept.h  Promise.h  PromiseDoneNotifier.h  Requester.h
include/nano-caf/async/detail/: CancelTimerObserver.h  FutureCallbackObject.h  FutureCallbackProxy.h  FutureObject.h  FutureObserver.h  InvokeResultType.h
include/nano-caf/blocking/: BlockingFuture.h  BlockingPromise.h  Future.h  FutureSet.h  Promise.h
include/nano-caf/blocking/detail/: BlockingFutureObject.h  FutureObject.h
include/nano-caf/message/: Message.h  MsgTypeId.h
include/nano-caf/msg/: Atom.h  MakeMessage.h  Message.h  MsgDef.h  PredefinedMsgs.h  RequestConcept.h  RequestDef.h
include/nano-caf/scheduler/: ActorSystem.h  Coordinator.h  Queue.h  Resumable.h  TaskResult.h  WorkSharingQueue.h  Worker.h  list_elem.h  queue.h  resumable.h  work_sharing_queue.h
include/nano-caf/timer/: ActorTimer.h  ActorTimerSystem.h  Duration.h  TimeoutCallback.h  TimerId.h  TimerSet.h  TimerSpec.h
include/nano-caf/util/: AggregateFieldsType.h  AggregateReflex.h  AggregateTrait.h  Assertions.h  CacheLineSize.h  CallableTrait.h  CvNotifier.h  DefaultMemAllocator.h  DefaultMemClaimer.h  Either.h  IntrusivePtr.h  ListElem.h  MacroReflex.h  MemberDetector.h  ObjectRegistry.h  Queue.h  Queue.tcc  Result.h  SharedBlock.h  SharedPtr.h  SharedPtrCtlBlock.h  SharedPtrDataHolder.h  ShutdownNotifier.h  TupleConcept.h  TypeList.h  Void.h  WeakPtr.h
script/: gen_aggregate_field_type.py
src/actor/: ActorHandle.cpp  ActorPtr.cpp  ActorWeakPtr.cpp  BlockingActor.cpp  LifoQueue.cpp  MailBox.cpp  NonblockingActor.cpp  SchedActor.cpp
src/actor/detail/: ActorCtlBlock.cpp  ActorTimerContext.cpp  ExpectOnceMsgHandlers.cpp
src/scheduler/: ActorSystem.cpp  Coordinator.cpp  WorkSharingQueue.cpp  Worker.cpp  work_sharing_queue.cpp
src/timer/: ActorTimer.cpp  ActorTimerSystem.cpp  TimerId.cpp  TimerSet.cpp
src/util/: ObjectRegistry.cpp  SharedPtrCtlBlock.cpp
tests/ut/: TestActor.cpp  TestActorTimer.cpp  TestActorTimerSystem.cpp  TestAsync.cpp  TestBehaviorBasedActor.cpp  TestBehaviorObject.cpp  TestBlockingActor.cpp  TestBlockingFuture.cpp  TestBlockingFutureObject.cpp  TestBlockingPromise.cpp  TestCoordinator.cpp  TestEither.cpp  TestExpectMsg.cpp  TestExpectOnceMsgHandlers.cpp  TestFuture.cpp  TestFutureCallbackObject.cpp  TestFutureObject.cpp  TestLifoQueue.cpp  TestOnActorRequest.cpp  TestSchedActor.cpp  TestSharedPtr.cpp  TestTimerId.cpp  TestWorkSharingQueue.cpp  TestWorker.cpp
