cmake_minimum_required(VERSION 3.22)
project(nano_caf_2)

set(CMAKE_CXX_STANDARD 17)

include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/../maco/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/third_party"
)

add_compile_options( -Wall -Wextra -DUSE_SPDLOG=1)

add_library(nano_caf
        include/nano-caf/Status.h
        include/nano-caf/util/MemberDetector.h
        include/nano-caf/util/TypeList.h
        include/nano-caf/util/MacroReflex.h
        include/nano-caf/util/ListElem.h
        include/nano-caf/util/Queue.h
        include/nano-caf/util/Queue.tcc
        include/nano-caf/util/SharedPtrDataHolder.h
        include/nano-caf/util/SharedPtr.h
        include/nano-caf/util/WeakPtr.h
        include/nano-caf/util/CacheLineSize.h
        include/nano-caf/util/SharedPtrCtlBlock.h
        include/nano-caf/util/SharedBlock.h
        include/nano-caf/util/DefaultMemAllocator.h
        include/nano-caf/util/Void.h
        include/nano-caf/util/Either.h
        include/nano-caf/util/Result.h
        include/nano-caf/util/CallableTrait.h
        include/nano-caf/util/TupleConcept.h
        include/nano-caf/util/AggregateFieldsType.h
        include/nano-caf/util/AggregateTrait.h
        include/nano-caf/util/ShutdownNotifier.h
        include/nano-caf/util/CvNotifier.h
        include/nano-caf/util/Assertions.h
        include/nano-caf/scheduler/Resumable.h
        include/nano-caf/scheduler/WorkSharingQueue.h
        include/nano-caf/scheduler/Coordinator.h
        include/nano-caf/scheduler/TaskResult.h
        include/nano-caf/actor/AbstractActor.h
        include/nano-caf/actor/NonblockingActor.h
        include/nano-caf/actor/detail/MsgHandler.h
        include/nano-caf/actor/detail/ActorCtlBlock.h
        include/nano-caf/actor/detail/BehaviorBase.h
        include/nano-caf/actor/detail/Behaviors.h
        include/nano-caf/actor/detail/MsgTypeTrait.h
        include/nano-caf/actor/detail/BehaviorObject.h
        include/nano-caf/actor/detail/CancellableMsgHandler.h
        include/nano-caf/actor/detail/ActorTimerContext.h
        include/nano-caf/actor/BlockingActor.h
        include/nano-caf/actor/LifoQueue.h
        include/nano-caf/actor/SchedActor.h
        include/nano-caf/actor/ActorPtr.h
        include/nano-caf/actor/ActorWeakPtr.h
        include/nano-caf/actor/Spawn.h
        include/nano-caf/actor/MailBox.h
        include/nano-caf/actor/ExitReason.h
        include/nano-caf/actor/Behavior.h
        include/nano-caf/actor/Actor.h
        include/nano-caf/actor/GlobalActorContext.h
        include/nano-caf/actor/detail/ExpectMsgHandler.h
        include/nano-caf/actor/detail/ExpectOnceMsgHandlers.h
        include/nano-caf/blocking/detail/BlockingFutureObject.h
        include/nano-caf/blocking/BlockingFuture.h
        include/nano-caf/blocking/BlockingPromise.h
        include/nano-caf/async/FutureConcept.h
        include/nano-caf/async/AbstractPromise.h
        include/nano-caf/async/detail/InvokeResultType.h
        include/nano-caf/async/detail/FutureObject.h
        include/nano-caf/async/detail/FutureObserver.h
        include/nano-caf/async/detail/FutureCallbackObject.h
        include/nano-caf/async/detail/FutureCallbackProxy.h
        include/nano-caf/async/detail/CancelTimerObserver.h
        include/nano-caf/async/Future.h
        include/nano-caf/async/Promise.h
        include/nano-caf/msg/Message.h
        include/nano-caf/msg/MakeMessage.h
        include/nano-caf/msg/MsgDef.h
        include/nano-caf/msg/RequestDef.h
        include/nano-caf/msg/RequestConcept.h
        include/nano-caf/timer/Duration.h
        include/nano-caf/timer/TimerId.h
        include/nano-caf/timer/TimerSet.h
        include/nano-caf/timer/TimeoutCallback.h
        include/nano-caf/timer/ActorTimerSystem.h
        src/scheduler/WorkSharingQueue.cpp
        src/scheduler/Worker.cpp
        src/scheduler/Coordinator.cpp
        src/scheduler/ActorSystem.cpp
        src/actor/LifoQueue.cpp
        src/actor/MailBox.cpp
        src/actor/SchedActor.cpp
        src/actor/BlockingActor.cpp
        src/actor/NonblockingActor.cpp
        src/actor/ActorPtr.cpp
        src/actor/ActorWeakPtr.cpp
        src/actor/detail/ExpectOnceMsgHandlers.cpp
        src/actor/detail/ActorTimerContext.cpp
        src/actor/detail/ActorCtlBlock.cpp
        src/util/SharedPtrCtlBlock.cpp
        src/timer/TimerId.cpp
        src/timer/TimerSet.cpp
        src/timer/ActorTimerSystem.cpp)

add_executable(nano_caf_ut third_party/catch.cpp
        tests/ut/TestSharedPtr.cpp
        tests/ut/TestWorkSharingQueue.cpp
        tests/ut/TestWorker.cpp
        tests/ut/TestActor.cpp
        tests/ut/TestSchedActor.cpp
        tests/ut/TestFutureObject.cpp
        tests/ut/TestFutureCallbackObject.cpp
        tests/ut/TestFuture.cpp
        tests/ut/TestBehaviorObject.cpp
        tests/ut/TestOnActorRequest.cpp
        tests/ut/TestBlockingActor.cpp
        tests/ut/TestEither.cpp
        tests/ut/TestExpectOnceMsgHandlers.cpp
        tests/ut/TestExpectMsg.cpp
        tests/ut/TestActorTimer.cpp
        tests/ut/TestBlockingFutureObject.cpp
        tests/ut/TestBlockingFuture.cpp
        tests/ut/TestBlockingPromise.cpp
        tests/ut/TestTimerId.cpp
        tests/ut/TestAsync.cpp)

target_link_libraries(nano_caf_ut nano_caf)
